# ot-harjoitustyo

./: .gitignore  READ.md  README.md
mathtrainer/: .coveragerc  .env  .env.test  .pylintrc  README.md  pakkaus  pyproject.toml  pytest.ini  tasks.py
mathtrainer/data/: sessiondata.sqlite  sessiondata_test.sqlite  userdata.sqlite  userdata_test.sqlite
mathtrainer/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md  vaativuusmaarittely.md
mathtrainer/src/: build.py  config.py  database_connection.py  index.py  initialize_databases.py  initialize_databe.py
mathtrainer/src/entities/: definitions.py  question.py  session.py  user.py
mathtrainer/src/practises/: practises1.py  practises2.py  practises3.old  practises3.py  practises4.py
mathtrainer/src/practises/practises3_questions/: question1.py  question2.py
mathtrainer/src/repositories/: connection.py  session_repository.py  user_repository.py
mathtrainer/src/services/: calculator.py  number_to_word.py  practiseutilities.py  printing_from_databases.py  utilities.py
mathtrainer/src/tests/: mathtrainersession_test.py  mathtraineruser_test.py  utilities_test.py
mathtrainer/src/tests/entities/: mathtrainersession_test.py  mathtraineruser_test.py  question_test.py
mathtrainer/src/tests/practises/: practises1_test.py  practises2_test.py  practises3_test.py  practises4_test.py
mathtrainer/src/tests/repositories/: session_repository_test.py  user_repository_test.py
mathtrainer/src/ui/: admin.py  mathtrainer.old  mathtrainer.py
(+16 files in other folders)
